# planta_gas_opcua

./: .gitignore  CMakeLists.txt  Makefile  README.md  connection_info.sh  debug_opcua_polling.sh  pid.txt  proyecto.py
.github/: copilot-instructions.md
backups/: auto_server_start_20250916_133910.json  auto_server_start_20250916_140509.json  auto_server_start_20250916_150054.json  auto_server_start_20250916_151115.json  auto_server_start_20250916_174337.json
config/: tags_planta_gas.json  tags_planta_gas_separated.json  tags_planta_gas_unified.json  tmp.txt
include/: common.h  opcua_server.h  pac_control_client.h  tag.h  tag_management_api.h  tag_manager.h
scripts/: production_gas.sh
src/: main.cpp  opcua_server.cpp  pac_control_client.cpp  tag.cpp  tag_management_api.cpp  tag_manager.cpp
web/: debug.html  index.html  server.py  simple.html  test.html  test_tags.html
web/css/: styles.css
web/js/: admin.js  api.js  dashboard.js  main.js  opcua.js  tags.js
